--- a/index.html
+++ b/index.html
@@ -6,7 +6,6 @@
     <title>The Web Developer Bootcamp 2020</title>
 </head>
 <body>
-    <a href="https://en.wikipedia.org/wiki/Wolf">Goes to wolf wiki</a>
-    <img src="https://upload.wikimedia.org/wikipedia/commons/5/5f/Kolm%C3%A5rden_Wolf.jpg" alt="wolf">
+    <h1>&#x2603;Snowman Productions<sup>&#174;</sup></h1>
 </body>
 </html>
