--- a/index.html
+++ b/index.html
@@ -6,6 +6,31 @@
     <title>The Web Developer Bootcamp 2020</title>
 </head>
 <body>
-    <h1>&#x2603;Snowman Productions<sup>&#174;</sup></h1>
+    <table>
+        <thead>
+            <tr>
+                <th>Subscription</th>
+                <th>Price</th>
+                <th>Support</th>
+            </tr>
+        </thead>
+        <tbody>
+            <tr>
+                <td>Free</td>
+                <td>Free</td>
+                <td>N/A</td>
+            </tr>
+            <tr>
+                <td>Personal</td>
+                <td>$9.99</td>
+                <td>Weekdays</td>
+            </tr>
+            <tr>
+                <td>Business</td>
+                <td>$49.99</td>
+                <td>24/7</td>
+            </tr>
+        </tbody>
+    </table>
 </body>
 </html>
