--- a/index.html
+++ b/index.html
@@ -6,31 +6,12 @@
     <title>The Web Developer Bootcamp 2020</title>
 </head>
 <body>
-    <table>
-        <thead>
-            <tr>
-                <th>Subscription</th>
-                <th>Price</th>
-                <th>Support</th>
-            </tr>
-        </thead>
-        <tbody>
-            <tr>
-                <td>Free</td>
-                <td>Free</td>
-                <td>N/A</td>
-            </tr>
-            <tr>
-                <td>Personal</td>
-                <td>$9.99</td>
-                <td>Weekdays</td>
-            </tr>
-            <tr>
-                <td>Business</td>
-                <td>$49.99</td>
-                <td>24/7</td>
-            </tr>
-        </tbody>
-    </table>
+    <form>
+        <label for="username">Username</label>
+        <input id="username" type="text" placeholder="username">
+        <label for="password">Password</label>
+        <input id="password" type="password" placeholder="password">
+        <button>Register</button>
+    </form>
 </body>
 </html>
