--- a/index.html
+++ b/index.html
@@ -3,15 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
     <title>The Web Developer Bootcamp 2020</title>
 </head>
 <body>
-    <form>
-        <label for="username">Username</label>
-        <input id="username" type="text" placeholder="username">
-        <label for="password">Password</label>
-        <input id="password" type="password" placeholder="password">
-        <button>Register</button>
-    </form>
+    <h1>Please make me green</h1>
+    <h2>This is so ugly</h2>
+    <p>Kogi enamel pin polaroid, meditation hammock fashion axe bespoke viral mixtape XOXO tote bag artisan bushwick copper mug poutine. Yuccie humblebrag shabby chic tumeric raclette cronut migas blue bottle. Brooklyn stumptown offal hell of, church-key try-hard hot chicken truffaut. Hell of pok pok microdosing cold-pressed XOXO vice prism yuccie, photo booth actually enamel pin deep v semiotics helvetica. Mixtape four dollar toast butcher yuccie heirloom.</p>
+    <button>Sign Up</button>
 </body>
 </html>
