--- a/index.html
+++ b/index.html
@@ -7,6 +7,15 @@
     <title>The Web Developer Bootcamp 2020</title>
 </head>
 <body>
-    <h1>Purple Grain</h1>
+    <h1>Todos</h1>
+    <ul>
+    <li class="done">Walk Chickens</li>
+    <li>Clean Out Coop</li>
+    <li class="done">Collect Chicken Eggs</li>
+    <li>Incubate Chicken Eggs</li>
+    <li>Hatch New Chickens!</li>
+    </ul>
+    <button id="clear">Clear List</button>
+    <button>Add Todo</button>
 </body>
 </html>
