--- a/index.html
+++ b/index.html
@@ -7,15 +7,18 @@
     <title>The Web Developer Bootcamp 2020</title>
 </head>
 <body>
-    <h1>Todos</h1>
-    <ul>
-    <li class="done">Walk Chickens</li>
-    <li>Clean Out Coop</li>
-    <li class="done">Collect Chicken Eggs</li>
-    <li>Incubate Chicken Eggs</li>
-    <li>Hatch New Chickens!</li>
-    </ul>
-    <button id="clear">Clear List</button>
-    <button>Add Todo</button>
+    <header>
+        <a href="/home">Home</a>
+        <a href="/contact">Contact</a>
+        <a href="/about">About</a>
+      </header>
+      
+      <p>
+        I like to eat <a href="/popcorn">popcorn</a> and <a href="/donuts">donuts</a>
+      </p>
+      
+      <p id="dislikes">
+        I hate eating <a href="/pickles">pickles</a> and <a href="/beets">beets</a>
+      </p>
 </body>
 </html>
