--- a/index.html
+++ b/index.html
@@ -4,21 +4,36 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="NO_TOUCHING.css">
     <title>The Web Developer Bootcamp 2020</title>
 </head>
 <body>
-    <header>
-        <a href="/home">Home</a>
-        <a href="/contact">Contact</a>
-        <a href="/about">About</a>
-      </header>
-      
-      <p>
-        I like to eat <a href="/popcorn">popcorn</a> and <a href="/donuts">donuts</a>
-      </p>
-      
-      <p id="dislikes">
-        I hate eating <a href="/pickles">pickles</a> and <a href="/beets">beets</a>
-      </p>
+    <div id="board">
+        <div class="square"></div>
+        <div class="square"></div>
+        <div class="square"></div>
+        <div class="square"></div>
+        <div class="square"></div>
+        <div class="square"></div>
+        <div class="square"></div>
+        <div class="square"></div>
+        <div class="square"></div>
+        <div class="square"></div>
+        <div class="square"></div>
+        <div class="square"></div>
+        <div class="square"></div>
+        <div class="square"></div>
+        <div class="square"></div>
+        <div class="square"></div>
+        <div class="square"></div>
+        <div class="square"></div>
+        <div class="square"></div>
+        <div class="square"></div>
+        <div class="square"></div>
+        <div class="square"></div>
+        <div class="square"></div>
+        <div class="square"></div>
+        <div class="square"></div>
+      </div>
 </body>
 </html>
