--- a/index.html
+++ b/index.html
@@ -8,32 +8,10 @@
     <title>The Web Developer Bootcamp 2020</title>
 </head>
 <body>
-    <div id="board">
-        <div class="square"></div>
-        <div class="square"></div>
-        <div class="square"></div>
-        <div class="square"></div>
-        <div class="square"></div>
-        <div class="square"></div>
-        <div class="square"></div>
-        <div class="square"></div>
-        <div class="square"></div>
-        <div class="square"></div>
-        <div class="square"></div>
-        <div class="square"></div>
-        <div class="square"></div>
-        <div class="square"></div>
-        <div class="square"></div>
-        <div class="square"></div>
-        <div class="square"></div>
-        <div class="square"></div>
-        <div class="square"></div>
-        <div class="square"></div>
-        <div class="square"></div>
-        <div class="square"></div>
-        <div class="square"></div>
-        <div class="square"></div>
-        <div class="square"></div>
-      </div>
+    <!--YOU DON'T NEED TO TOUCH THE MARKUP!-->
+    <div class="card">
+        <img alt="" src="https://assets.codepen.io/123865/dog.png">
+        <h1>I Am Dog</h1>
+    </div>  
 </body>
 </html>
