--- a/index.html
+++ b/index.html
@@ -6,12 +6,17 @@
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="NO_TOUCHING.css">
     <title>The Web Developer Bootcamp 2020</title>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
 </head>
 <body>
     <!--YOU DON'T NEED TO TOUCH THE MARKUP!-->
-    <div class="card">
-        <img alt="" src="https://assets.codepen.io/123865/dog.png">
-        <h1>I Am Dog</h1>
-    </div>  
+    <section class="container">
+        <h1 class="text-white bg-dark text-center">Bad News</h1>
+        <div class="alert alert-warning" role="alert">
+        You are going to die one day! It sucks, but it's normal :(
+        </div>
+        <button type="button" class="btn btn-success">Come To Terms With</button>
+        <button type="button" class="btn btn-danger">Continue To Deny</button>
+    </section>
 </body>
 </html>
