--- a/index.html
+++ b/index.html
@@ -10,13 +10,26 @@
 </head>
 <body>
     <!--YOU DON'T NEED TO TOUCH THE MARKUP!-->
-    <section class="container">
-        <h1 class="text-white bg-dark text-center">Bad News</h1>
-        <div class="alert alert-warning" role="alert">
-        You are going to die one day! It sucks, but it's normal :(
+    <div class="container">
+        <div class="row">
+            <div class="col-4 p-3  mb-2  bg-danger">
+               one third
+            </div>
+            <div class="col-8 p-3 mb-2 bg-info ">
+               two third
+            </div>
+            </div>
+            <div class="row">
+              <div class="col-3 p-3 mb-2 bg-warning ">
+               one third
+            </div>
+            <div class="col-6 p-3 mb-2 bg-primary">
+               two third
+            </div>
+             <div class="col-3 p-3 mb-2 bg-warning">
+               two third
+            </div>
+            </div>
         </div>
-        <button type="button" class="btn btn-success">Come To Terms With</button>
-        <button type="button" class="btn btn-danger">Continue To Deny</button>
-    </section>
 </body>
 </html>
